--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Hero/Jumbotron -->
     <section id="hero"></section>
 
-    <!-- <Sub Section > -->
+    <!-- <Section with articles> -->
         <section class="content">
             <!-- Article SEO -->
             <article id="search-engine-optimization">
@@ -60,35 +60,38 @@
             </article>
     </section>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+<!-- Aside section -->
+    <aside>
+        <div>
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" alt="Icon for Lead gen"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div>
             <h3>Brand Awareness</h3>
             <img src="./images/brand-awareness.png" alt="Icon for Brand Awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div>
             <h3>Cost Management</h3>
             <img src="./images/cost-management.png" alt="Icon for cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </aside>
+
+    <!-- Footer -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
