--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-    </nav>
-</header>
+        </nav>
+    </header>
 
 <!-- Hero/Jumbotron -->
     <section id="hero"></section>
 
-    <!-- <Section with articles> -->
+    <!-- <Section with Articles> -->
         <section class="content">
             <!-- Article SEO -->
             <article id="search-engine-optimization">
@@ -58,7 +58,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </article>
-    </section>
+        </section>
 
 <!-- Aside section -->
     <aside>
