--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         </section>
 
 <!-- Aside section -->
-    <aside>
-        <div>
+    <aside class="aside">
+        <aside>
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" alt="Icon for Lead gen"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div>
+        </aside>
+        <aside>
             <h3>Brand Awareness</h3>
             <img src="./images/brand-awareness.png" alt="Icon for Brand Awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div>
+        </aside>
+        <aside>
             <h3>Cost Management</h3>
             <img src="./images/cost-management.png" alt="Icon for cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </aside>
     </aside>
 
     <!-- Footer -->
